--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -3,6 +3,10 @@ $secondary: #000000
 $third: #FFC800
 $four: #898E96
 
+$base-font-size: 16px
+$base-color: $primary
+$base-border-color: $four
+
 $primary-color: $primary
 $primary-bg: $secondary
 $primary-border: 2px solid $third
