--- a/src/styles/_bee_textbox.sass
+++ b/src/styles/_bee_textbox.sass
@@ -1,19 +1,24 @@
 @import "variables"
 
+$textbox-width: 200px
+
 .bee-textbox
-  width: 100%
+  width: $textbox-width
   margin: 10px
   padding: 5px 0
   border: none
-  border-bottom: 1px solid $four
+  border-bottom: 1px solid $base-border-color
   background: inherit
-  color: $primary
+  color: $base-color
   outline: none
   font-family: Beeline Sans
-  font-size: 16px
+  font-size: $base-font-size
   font-weight: 400
   line-height: 120%
 
   &--error
     color: $color-error
     border-bottom: $border-error
+
+  &::placeholder
+    font-size: .8em
