Added Toast component

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,6 +1,7 @@
 @import "fonts"
 @import "variables"
+@import "animation"
 
-// src/styles/index.sass
 @import 'bee_button'
 @import "bee_textbox"
+@import "../components/toast/toast"
