--- a/src/styles/_bee_button.sass
+++ b/src/styles/_bee_button.sass
@@ -8,11 +8,6 @@ $small-width: 200px
 $normal-width: 270px
 $big-width: 270px
 
-$primary: #ffffff
-$secondary: #000000
-$third: #FFC800
-$four: #898E96
-
 $primary-color: $primary
 $primary-bg: $secondary
 $primary-border: 2px solid $third
@@ -41,7 +36,18 @@ $primary-border: 2px solid $third
     border: none
 
     &:active
-      color: #494747
+      filter: brightness(150)
+
+      & ellipse
+        fill: white
+
+    & span
+      margin-right: 10px
+
+    & svg
+      width: 1em
+      height: 1em
+      transform: translate(0, .2em) rotate(-45deg)
 
   &--white
     color: $primary
@@ -58,10 +64,6 @@ $primary-border: 2px solid $third
   &--big
     font-size: $big-font-size
 
-  & svg
-    margin-left: 10px
-    transform: translate(10px) rotate(-45deg)
-
   &--outlined
     position: relative
     height: 3.25em
@@ -70,14 +72,16 @@ $primary-border: 2px solid $third
     align-items: center
     justify-content: space-between
     width: $normal-width
-    background: black
+    background: $secondary
     border-radius: 50px
     transition: .3s
     overflow: hidden
 
     & svg
-      width: 2.5em
-      height: 2.5em
+      width: 3.8em
+      height: 3.8em
+      margin-left: 1em
+      transform: translate(15px) rotate(-45deg)
 
     & ellipse
       transition: .3s
@@ -108,6 +112,10 @@ $primary-border: 2px solid $third
 
     &.bee-button--big
       width: $big-width
+
+      & svg
+        width: 4em
+        height: 4em
 
     &.disabled
       border: 1px solid $four
