Fixed button styles

--- a/src/components/button/button.sass
+++ b/src/components/button/button.sass
@@ -1,8 +1,8 @@
-@import "variables"
+@import "src/styles/variables"
 
 $small-font-size: 14px
 $normal-font-size: 20px
-$big-font-size: 26px
+$big-font-size: 24px
 
 $small-width: 200px
 $normal-width: 270px
@@ -66,8 +66,8 @@ $primary-border: 2px solid $third
 
   &--outlined
     position: relative
-    height: 3.25em
-    padding: 5px 19px
+    height: 3em
+    padding: 0px 19px
     display: flex
     align-items: center
     justify-content: space-between
@@ -78,10 +78,10 @@ $primary-border: 2px solid $third
     overflow: hidden
 
     & svg
-      width: 3.8em
-      height: 3.8em
+      width: 4em
+      height: 4em
       margin-left: 1em
-      transform: translate(15px) rotate(-45deg)
+      transform: translate(18px) rotate(-45deg)
 
     & ellipse
       transition: .3s
@@ -114,8 +114,8 @@ $primary-border: 2px solid $third
       width: $big-width
 
       & svg
-        width: 4em
-        height: 4em
+        width: 4.3em
+        height: 4.3em
 
     &.disabled
       border: 1px solid $four
