--- a/src/components/toast/toast.sass
+++ b/src/components/toast/toast.sass
@@ -7,11 +7,14 @@ $toast-Success-bg: #a3f192
 .bee-toasts
   position: fixed
   left: 50%
-  top: 60px
+  top: 80px
   min-width: $toast-width
   transform: translateX(-50%)
-  z-index: 99
+  font-family: Beeline Sans
+  font-size: 19px
+  line-height: 1.2em
   color: $toast-color
+  z-index: 99
 
   &__item
     position: relative
