--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -2,6 +2,6 @@
 @import "variables"
 @import "animation"
 
-@import 'bee_button'
-@import "bee_textbox"
+@import '../components/button/button'
+@import "../components/textbox/textbox"
 @import "../components/toast/toast"
