Added context menu component

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,7 +1,8 @@
+@import "animation"
 @import "fonts"
 @import "variables"
-@import "animation"
 
 @import '../components/button/button'
 @import "../components/textbox/textbox"
 @import "../components/toast/toast"
+@import "../components/context-menu/context-menu"
