Rename sass files

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,6 +1,6 @@
-@import "animation"
-@import "fonts"
-@import "variables"
+@import "bee_animation"
+@import "bee_fonts"
+@import "bee_variables"
 
 @import '../components/button/button'
 @import "../components/textbox/textbox"
