--- a/src/styles/_bee_variables.sass
+++ b/src/styles/_bee_variables.sass
@@ -17,3 +17,32 @@ $primary-border: 2px solid $third
 
 $color-error: #e36c6c
 $border-error: 1px solid #e36c6c
+
+// Palette
+$first: #FFFFFF
+$second: #F4F0E2
+$third: #FFC800
+$four: #FA3200
+$five: #898E96
+$sixth: #454545
+$seventh: #131313
+$eighth: #151515
+
+// colors
+$main-color: $third
+$main-light-color: $first
+$main-semi-dark-color: #131313
+$main-dark-color: $eighth
+
+$additional-beige-color: #F4F0E2
+$additional-gray-color: #898E96
+$additional-dark-gray-color: #454545
+
+$error-color: $four
+
+// Fonts
+$main-font: Craftwork Grotesk Regular
+$additional-font: Beeline Sans
+$font-light: 300
+$font-normal: 400
+$font-bold: 600
