--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,6 +1,7 @@
-@import "bee_animation"
 @import "bee_fonts"
 @import "bee_variables"
+@import "bee_animation"
+@import "bee_typography"
 
 @import '../components/button/button'
 @import "../components/textbox/textbox"
