--- a/src/components/button/button.sass
+++ b/src/components/button/button.sass
@@ -140,6 +140,8 @@ $gray-border: 1px solid $five
 
     &.disabled:hover
       color: $gray-color
+      & ellipse
+        fill: $gray-color
 
     &:active:before
       transition: .1s
