--- a/src/components/context-menu/context-menu.sass
+++ b/src/components/context-menu/context-menu.sass
@@ -7,7 +7,7 @@
   box-shadow: 4px 4px 4px 4px #00000040
   font-size: 14px
   font-family: Beeline Sans
-  color: $third
+  color: $main-light-color
 
   &.left
     right: 0
@@ -26,7 +26,7 @@
       margin-bottom: 0
 
     &:hover
-      color: $primary
+      color: $main-color
 
     @each $icon in (add-folder, upload, upload-link, edit)
       &.#{$icon}
