Added context menu

--- a/src/components/button/button.sass
+++ b/src/components/button/button.sass
@@ -25,7 +25,8 @@ $gray-border: 1px solid $five
   &--small
     font-size: $small-font-size
 
-  & span
+  &__label
+    font-size: 1em
     width: 100%
   &--left span
     text-align: left
