--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -7,3 +7,4 @@
 @import "../components/textbox/textbox"
 @import "../components/toast/toast"
 @import "../components/context-menu/context-menu"
+@import "../components/modal/modal"
