--- a/src/components/context-menu/context-menu.sass
+++ b/src/components/context-menu/context-menu.sass
@@ -28,7 +28,7 @@
     &:hover
       color: $main-color
 
-    @each $icon in (add-folder, upload, upload-link, edit)
+    @each $icon in (add-folder, upload, upload-link, edit, move, delete)
       &.#{$icon}
         padding-left: 2em
         &::after
@@ -43,4 +43,4 @@
 
   &__divider
     margin: 20px 0
-    border-bottom: 1px solid $four
+    border-bottom: 1px solid $main-light-color
