Fixed modal styles

--- a/src/components/modal/modal.sass
+++ b/src/components/modal/modal.sass
@@ -12,7 +12,7 @@ $modal-mask-bg: fade_out(#3E3E3E, 0.75)
 
 .modal
   position: absolute
-  top: 15%
+  top: 50%
   left: 50%
   width: 560px
   max-width: 100%
@@ -26,6 +26,7 @@ $modal-mask-bg: fade_out(#3E3E3E, 0.75)
     background: $secondary
     border-radius: 3px
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.5)
+    color: $main-light-color
     cursor: default
 
   &__header
