Added downoad image

--- a/src/components/context-menu/context-menu.sass
+++ b/src/components/context-menu/context-menu.sass
@@ -28,7 +28,7 @@
     &:hover
       color: $main-color
 
-    @each $icon in (add-folder, upload, upload-link, edit, move, delete, transcode-btn)
+    @each $icon in (add-folder, upload, upload-link, edit, move, delete, transcode-btn, download)
       &.#{$icon}
         padding-left: 2em
         &::after
